@@ -1,5 +1,6 @@
 CHANGES
 
+ - separate_y_chromosone_data available in lims
  - samplesheet driver for lims object
  - general tidy-up of the xml lims driver
  - logic for sample/study_publishable_name methods moved tost::api::lims wrapper
